# text_editor

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md
src/: config.h.in  document_controller.cpp  document_controller.h  document_model.cpp  document_model.h  main.cpp  text_editor.cpp  text_editor.h
